trunk/Archive2/0f/9dab292a58bae3/output
main.cpp: In function 'int main()':
main.cpp:101:99: error: could not convert template argument '& fDummy' to 'PyObject* (*)(PyObject*, char*)'
     table.tp_getattr = & Generate< getattrfunc, &fDummy, decltype(&Base::getattr), &Base::getattr >::call;
                                                                                                   ^
